# cmdAI

./: README.md  config.yaml  pyproject.toml  run.sh
cmdai_terminal/: __main__.py  app.py  config.py
cmdai_terminal/api/: ollama.py  openai_client.py  unified_client.py
cmdai_terminal/components/: chat_view.py  input_box.py  sidebar.py
cmdai_terminal/models/: conversation.py  message.py
cmdai_terminal/storage/: history.py
